--- a/src/app/main/apps/photographer/add-edit-photographer/add-edit-photographer.component.html
+++ b/src/app/main/apps/photographer/add-edit-photographer/add-edit-photographer.component.html
@@ -11,10 +11,6 @@
             </div>
             <div class="h1 mt-16">Add new photographer</div>
         </div>
-        <button mat-raised-button class="save-product-button" [disabled]="userForm.invalid || form.pristine"
-            *ngIf="pageType ==='add'">
-            <span>ADD</span>
-        </button>
     </div>
     <!-- / HEADER -->
 
@@ -26,7 +22,7 @@
             <!-- REACTIVE FORM EXAMPLE -->
 
             <form class="mat-card mat-elevation-z4 p-24 mr-24" fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto"
-                name="userForm" [formGroup]="userForm">
+                name="editForm" [formGroup]="editForm">
 
                 <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
 
@@ -58,8 +54,14 @@
                     <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
                         <mat-label>Email</mat-label>
                         <input matInput formControlName="email" required>
-                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>Email is required!</mat-error>
+                        <mat-icon matSuffix class="secondary-text">email</mat-icon>
+                        <mat-error *ngIf="editForm.get('email').hasError('required')">
+                            Email is required
+                        </mat-error>
+                        <mat-error *ngIf="!editForm.get('email').hasError('required') &&
+                                    editForm.get('email').hasError('email')">
+                            Please enter a valid email address
+                        </mat-error>
                     </mat-form-field>
                 </div>
 
@@ -67,16 +69,16 @@
 
                     <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
                         <mat-label>Phone</mat-label>
-                        <input matInput formControlName="phone" required>
-                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>Phone is required!</mat-error>
+                        <input matInput formControlName="mobile_number" required>
+                        <mat-icon matSuffix class="secondary-text">local_phone</mat-icon>
+                        <mat-error>Phone number must be between 7 to 15 digits</mat-error>
                     </mat-form-field>
 
                     <mat-form-field appearance="outline" fxFlex="50" class="pl-4">
                         <mat-label>Color Code</mat-label>
-                        <input matInput formControlName="colorCode" required>
+                        <input matInput formControlName="colorCode">
                         <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>Color Code is required!</mat-error>
+                        <mat-error>Color Code must be 6 digit long!</mat-error>
                     </mat-form-field>
 
                 </div>
@@ -84,12 +86,10 @@
                     <mat-form-field appearance="outline" fxFlex="100">
                         <mat-label>Status</mat-label>
                         <mat-select formControlName="status" required>
-                            <mat-option [value]="'Active'">
-                                Active
-                            </mat-option>
-                            <mat-option [value]="'Inactive'">
-                                Inactive
-                            </mat-option>
+                            <mat-select formControlName="status">
+                                <mat-option *ngFor="let statusItem of statusList" [value]="statusItem.id">
+                                    {{statusItem.name}}</mat-option>
+                            </mat-select>
                         </mat-select>
                         <mat-icon matSuffix class="secondary-text">outlined_flag</mat-icon>
                         <mat-error>status is required!</mat-error>
@@ -100,6 +100,16 @@
                         <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
                         <mat-error>Unique URL is required!</mat-error>
                     </mat-form-field>
+                </div>
+                <div fxLayout="row" fxLayoutAlign="center center">
+                    <button mat-raised-button type="button" color="accent" [disabled]="editForm.invalid || editForm.pristine ||
+                    editForm.disabled" *ngIf="pageType ==='add'" (click)="formSubmit()">
+                        Add
+                    </button>
+                    &nbsp;&nbsp;
+                    <button mat-raised-button type="button" color="warn">
+                        Cancel
+                    </button>
                 </div>
             </form>
         </div>
